feat(command): introduce command framework with context, handlers, and dynamic registration
- Add CommandContext for encapsulating command sender and input.
- Implement CommandHandler interface for command execution.
- Create CommandRegistry for dynamic command registration and management.
- Introduce CommandSuggestionsProvider for tab completion suggestions.
- Develop PaperCommandExecutor for handling command execution in a Bukkit environment.
- Add annotations NexoCommand and NexoSubCommand for defining command metadata.
- Implement command model classes including CommandDefinition, CommandMetadata, and CommandArguments for structured command handling.
- Enhance command execution with support for subcommands and permissions.